title and truncate fix

--- a/static/css/aboutus.css
+++ b/static/css/aboutus.css
@@ -4,9 +4,6 @@
   .img-about img {
     width: 100%;
   }
-  .col-6 {
-    padding: 25px 0;
-  }
   .about-help {
     position: relative;
     background-color: #84cffc;
